tests/paczka1/fuzzy1/43562947.err
Error in line 12: tU_4muKp A823 39,6
Error in line 15: tUl4muKp A823 179,8
Error in line 28: WbX A823 67,9
Error in line 34: WbX S33 43,6
